# structflo-cser

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  quick.md  union_box_plan.md
.github/workflows/: ci.yml  publish.yml
annotate/: __main__.py  pdf.py  server.py  storage.py
annotate/templates/: index.html
asset_scripts/: download_chembl.sh  download_distractor_images.py
config/: data.yaml
docs/: learned_matcher_plan.md  lps.md  publishing-weights.md
notebooks/: 01-quickstart.ipynb  02-LPS.ipynb
notebooks/.ipynb_checkpoints/: 01-quickstart-checkpoint.ipynb
scripts/: 01_fetch_smiles.py  02_generate_dataset.py  03_train.py  publish_weights.py  visualize_labels.py
struct_labels/: __init__.py  _geometry.py
struct_labels/data/: distractor_images.py  smiles.py
struct_labels/distractors/: __init__.py  charts.py  shapes.py  text_elements.py
struct_labels/generation/: dataset.py  page.py  specialty.py  tabular.py
struct_labels/inference/: detector.py  pairing.py
struct_labels/pipeline/: __init__.py  cli.py  matcher.py  models.py  ocr.py  pipeline.py
struct_labels/rendering/: chemistry.py  text.py
struct_labels/training/: trainer.py
struct_labels/viz/: labels.py
structflo/cser/: __init__.py  _geometry.py  config.py  weights.py
structflo/cser/data/: distractor_images.py  smiles.py
structflo/cser/distractors/: __init__.py  charts.py  shapes.py  text_elements.py
structflo/cser/generation/: dataset.py  page.py  specialty.py  tabular.py
structflo/cser/inference/: detector.py  nms.py  pairing.py  tiling.py
structflo/cser/lps/: __init__.py  dataset.py  evaluate.py  features.py  matcher.py  scorer.py  train.py
structflo/cser/pipeline/: __init__.py  cli.py  matcher.py  models.py  pipeline.py  smiles_extractor.py
structflo/cser/rendering/: chemistry.py  text.py
structflo/cser/training/: trainer.py
structflo/cser/viz/: __init__.py  detections.py  labels.py
test_scripts/: detect_structures_labels.py
tests/: __init__.py  test_config.py  test_generation.py  test_geometry.py  test_imports.py  test_inference.py  test_models.py  test_viz.py
