[project]
name = "struct-labels"
version = "0.1.0"
description = "YOLO-based chemical structure + label detector with synthetic data generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chembl-webresource-client>=0.10.9",
    "decimer>=2.8.0",
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "paddleocr>=3.4.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "rdkit>=2025.9.5",
    "requests>=2.31.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.14",
]

[project.scripts]
sl-fetch-smiles         = "struct_labels.data.smiles:main"
sl-generate             = "struct_labels.generation.dataset:main"
sl-train                = "struct_labels.training.trainer:main"
sl-detect               = "struct_labels.inference.detector:main"
sl-viz                  = "struct_labels.viz.labels:main"
sl-download-distractors = "struct_labels.data.distractor_images:main"
sl-annotate             = "annotate.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["struct_labels", "annotate"]
